src/objects/AE_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Arm_Or_Subject_Id__c</fullName>
        <label>Arm Or Subject Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Arm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Arm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PossibleSAEs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PossibleSAEs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Request</label>
        <referenceTo>Report_Request__c</referenceTo>
        <relationshipLabel>AE Summary</relationshipLabel>
        <relationshipName>AE_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResolvedAEs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ResolvedAEs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Row_Color__c</fullName>
        <label>Row Color</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAEs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TotalAEs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnresolvedAEs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>UnresolvedAEs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AE Summary</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AE Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>